# cinema-ticket-reservation-api

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
project/: settings.py  urls.py
ticket/: admin.py  models.py  urls.py  views.py
ticket/api/: permissions.py  serializers.py
ticket/migrations/: 0001_initial.py  0002_guest_movie_reservation_delete_box.py  0003_alter_reservation_movie.py  0004_alter_reservation_guest_alter_reservation_movie.py  0005_alter_reservation_movie.py  0006_review.py  0007_alter_reservation_guest.py  0008_alter_reservation_movie.py  0009_alter_reservation_movie.py  0010_alter_reservation_movie.py  0011_alter_reservation_movie.py  0012_reservation_movie_name.py  0013_alter_reservation_movie_name.py  0014_rename_reviewer_review_author.py
